package io.scala.domaines

import io.scala.data.TalksInfo
import io.scala.modules.TalkCard

import com.raquo.laminar.api.L.{*, given}
import com.raquo.laminar.nodes.ReactiveHtmlElement
import com.raquo.laminar.tags.HtmlTag
import java.nio.file.Path
import org.scalajs.dom
import org.scalajs.dom.HTMLDivElement
import io.scala.modules.elements.Slides
import io.scala.svgs.Icons
import io.scala.data.parseDescription

sealed trait TalkInfo[A <: TalkInfo[A]]:
  def ordinal: Int

object TalkInfo:
  given [A <: TalkInfo[A]]: Ordering[A] = Ordering[Int].on(_.ordinal)

enum ConfDay extends TalkInfo[ConfDay] {
  case Thursday, Friday

  override def toString(): String =
    this match
      case ConfDay.Thursday => "Thursday 15 Feb."
      case ConfDay.Friday   => "Friday 16 Feb."

  def toId: String = "day" + this.ordinal
}

enum Room extends TalkInfo[Room]:
  case One
  def render = "Room " + this.ordinal

sealed trait Act:
  def day: ConfDay | Null
  def start: Time | Null
  def render: Div

sealed trait Durable:
  def duration: Int

case class Talk(
    title: String = "",
    slug: String,
    description: String,
    kind: Talk.Kind = Kind.Speech,
    day: ConfDay | Null = null,
    room: Room | Null = null,
    start: Time | Null = null,
    speakers: List[Speaker],
    category: Talk.Category,
    slides: Option[Slides] = None,
    replay: Option[String] = None
) extends Act
    with Durable:
  lazy val renderDescription = parseDescription(description)("To be announced").map(p(_))
  def duration: Int          = kind.duration
  def render: Div            = TalkCard(this)
  def isKeynote: Boolean     = kind == Talk.Kind.Keynote

object Talk:

  given Ordering[Talk] = Ordering.by(talk => (talk.kind, talk.title))

  // I think it is better to explicitly define ordering rather than to depend
  // on enum values declaration order via ordinal field (one could inadvertently
  // break the ordering just by reorganizing the declarations).
  given Ordering[Kind] = Ordering.by:
    case Kind.Lightning => 4
    case Kind.Short     => 3
    case Kind.Speech    => 2
    case Kind.Keynote   => 1

  enum Kind:
    case Lightning, Short, Speech, Keynote

    override def toString = this match
      case Speech    => "Talk"
      case Short     => "Short"
      case Keynote   => "Keynote"
      case Lightning => "Lightning"

    def toStyle = this match
      case Speech    => "presentation-talk"
      case Short     => "presentation-short"
      case Keynote   => "presentation-keynote"
      case Lightning => "presentation-lightning"

    def duration = this match
      case Speech    => 45
      case Short     => 25
      case Keynote   => 60
      case Lightning => 15

  enum Category:
    case Algebra, Effects, ToolsEcosystem, Community, Cloud, Modeling, DataEng, AI

    def slug: String = this match
      case Algebra        => "dash-of-algebra"
      case DataEng        => "data-engineering"
      case Community      => "community"
      case ToolsEcosystem => "tools-and-ecosystem"
      case Effects        => "effects-system"
      case Modeling       => "modeling"
      case Cloud          => "cloud"
      case AI             => "artificial-intelligence"

    def name: String = this match
      case Algebra        => "A Dash of Algebra"
      case DataEng        => "Data Engineering"
      case Community      => "Community"
      case ToolsEcosystem => "Tools & Ecosystems"
      case Effects        => "Concurrent programming"
      case Modeling       => "Modeling"
      case Cloud          => "Cloud"
      case AI             => "Artificial Intelligence"

    def toStyle: String = this match
      case Algebra        => "category-algebra"
      case DataEng        => "category-data"
      case Community      => "category-community"
      case ToolsEcosystem => "category-tools"
      case Effects        => "category-effects"
      case Modeling       => "category-modeling"
      case Cloud          => "category-cloud"
      case AI             => "category-ai"

end Talk

case class Break(
    day: ConfDay,
    start: Time,
    kind: Break.Kind,
    overrideDuration: Option[Int] = None
) extends Act
    with Durable:
  def duration: Int = overrideDuration.getOrElse(kind.duration)
  def render =
    div(className := s"blank-card break ${kind.toStyle}", kind.toIcon, span(span(duration), span("min")), kind.toIcon)

object Break:
  enum Kind:
    case Large, Lunch

    def toStyle = this match
      case Large  => "break-large"
      case Lunch  => "break-lunch"
    def toIcon = this match
      case Large  => Icons.chat
      case Lunch  => Icons.food
    def duration = this match
      case Large  => 15
      case Lunch  => 60
  object Kind:
    val max: Int = Kind.values.map(_.duration).max

case class Special(
    day: ConfDay,
    start: Time,
    kind: Special.Kind
) extends Act:
  def render: ReactiveHtmlElement[HTMLDivElement] = kind match
    case Special.Kind.End            => div(className := "blank-card", Icons.logo("#222222"))
    case Special.Kind.CommunityParty => div(className := s"blank-card community-party")

object Special:
  enum Kind:
    case End, CommunityParty
